fix padding rem on mobile chat bubbles

--- a/app/styles/componentStyles/_mainViewContainer.scss
+++ b/app/styles/componentStyles/_mainViewContainer.scss
@@ -87,7 +87,7 @@
         height:100%;
         max-height:1000vh;
         width:100%;
-        padding: 10rem 2rem 0 6rem;
+        padding: 10rem 3rem 0 3rem;
         order:2;
     }
 
